# Glyph

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_TOOLS.md  Dockerfile  EXAMPLES.md  FAQ.md  FUNCTIONALITY.md  INSTALLATION.md  LICENSE  Makefile  README.md  TESTING_GUIDE.md  TRANSCRIPTION_API_FEATURE.md  WHISPER_MODELS.md  agent_cli.py  agent_config.py  agent_context.py  agent_llm.py  agent_memory.py  agent_prompts.py  agent_tools.py  audio_config.py  backup_manager.py  cleaning.py  cleanup_backups.py  demo_enhanced_agent.py  diff.py  interactive_cli.py  live_transcription.py  llm.py  main.py  md_file.py  model_config.py  prompts.py  pyproject.toml  recording.py  requirements-dev.txt  (+20 more)
assets/: .gitkeep
backups/: .gitkeep
docs/: .gitkeep
examples/: daily_journal.md  meeting_notes.md  project_notes.md  sample_todo.md
prompts/: system_prompt.txt  user_prompt.txt
tests/: __init__.py  test_basic.py
